--- a/quiz.html
+++ b/quiz.html
@@ -13,15 +13,11 @@
 
     <main>
         <h1>Mental Health Self-Assessment Quiz</h1>
+        <p>This quiz is designed to help you assess your mental well-being. Please answer all questions honestly.</p>
         <form id="quizForm">
-            <div class="question">
-                <p>1. How often do you feel overwhelmed by your emotions?</p>
-                <input type="radio" name="q1" value="1"> Rarely
-                <input type="radio" name="q1" value="2"> Sometimes
-                <input type="radio" name="q1" value="3"> Often
-                <input type="radio" name="q1" value="4"> Always
+            <div id="quizContainer">
+                <!-- Quiz questions will be dynamically inserted here -->
             </div>
-            <!-- Add 7 more questions following the same structure -->
             <button type="submit">Submit</button>
         </form>
         <div id="quizResult"></div>
