--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,6 @@
         <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
     </footer>
 
-    <script src="/js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
