--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
         <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
     </footer>
 
-    <script src="/js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
