--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healing Horizons - Login</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -28,6 +28,6 @@
         <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
     </footer>
 
-    <script src="/js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
