--- a/index.html
+++ b/index.html
@@ -8,56 +8,69 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="blog">Blog</a></li>
-                <li><a href="quiz">Quiz</a></li>
-                <li><a href="contact">Contact</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="login">Login</a></li>
-                <li><a href="signup">Sign Up</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="blog">Blog</a></li>
+                    <li><a href="quiz">Quiz</a></li>
+                    <li><a href="contact">Contact</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="login">Login</a></li>
+                    <li><a href="signup">Sign Up</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
-        <h1>Welcome to Healing Horizons</h1>
-        <section>
-            <h2>Understanding Mental Health</h2>
-            <p>Mental health includes our emotional, psychological, and social well-being. It affects how we think, feel, and act.</p>
+        <section class="hero">
+            <div class="container">
+                <h1>Welcome to Healing Horizons</h1>
+                <p>Your journey to better mental health starts here.</p>
+                <a href="/quiz" class="btn">Take Our Mental Health Quiz</a>
+            </div>
         </section>
 
-        <section>
-            <h2>Types of Mental Illnesses</h2>
-            <ul>
-                <li>Depression</li>
-                <li>Anxiety Disorders</li>
-                <li>Bipolar Disorder</li>
-                <li>Schizophrenia</li>
-                <li>Eating Disorders</li>
-            </ul>
-        </section>
+        <div class="container">
+            <section>
+                <h2>Understanding Mental Health</h2>
+                <p>Mental health includes our emotional, psychological, and social well-being. It affects how we think, feel, and act.</p>
+            </section>
 
-        <section>
-            <h2>Ways to Prevent Mental Illness</h2>
-            <ol>
-                <li>Regular exercise</li>
-                <li>Healthy diet</li>
-                <li>Adequate sleep</li>
-                <li>Stress management</li>
-                <li>Building strong relationships</li>
-            </ol>
-        </section>
+            <section>
+                <h2>Types of Mental Illnesses</h2>
+                <ul>
+                    <li>Depression</li>
+                    <li>Anxiety Disorders</li>
+                    <li>Bipolar Disorder</li>
+                    <li>Schizophrenia</li>
+                    <li>Eating Disorders</li>
+                </ul>
+            </section>
 
-        <section>
-            <h2>Informative Videos</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-        </section>
+            <section>
+                <h2>Ways to Prevent Mental Illness</h2>
+                <ol>
+                    <li>Regular exercise</li>
+                    <li>Healthy diet</li>
+                    <li>Adequate sleep</li>
+                    <li>Stress management</li>
+                    <li>Building strong relationships</li>
+                </ol>
+            </section>
+
+            <section>
+                <h2>Informative Videos</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+            </section>
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="main.js"></script>
