--- a/blog.html
+++ b/blog.html
@@ -12,22 +12,28 @@
     </header>
 
     <main>
-        <h1>Mental Health Blog</h1>
-        <article>
-            <h2>Understanding Depression in Youth</h2>
-            <p>By Dr. Jane Smith</p>
-            <p>Depression is a common mental health issue affecting many young people today...</p>
-        </article>
-        <article>
-            <h2>The Impact of Social Media on Mental Health</h2>
-            <p>By Dr. John Doe</p>
-            <p>In today's digital age, social media plays a significant role in shaping youth mental health...</p>
-        </article>
-        <!-- Add more blog posts as needed -->
+        <div class="container">
+            <h1>Mental Health Blog</h1>
+            <article class="blog-post">
+                <h2>Understanding Depression in Youth</h2>
+                <p>By Dr. Jane Smith</p>
+                <p>Depression is a common mental health issue affecting many young people today...</p>
+                <a href="/blog/understanding-depression" class="btn">Read More</a>
+            </article>
+            <article class="blog-post">
+                <h2>The Impact of Social Media on Mental Health</h2>
+                <p>By Dr. John Doe</p>
+                <p>In today's digital age, social media plays a significant role in shaping youth mental health...</p>
+                <a href="/blog/social-media-impact" class="btn">Read More</a>
+            </article>
+            <!-- Add more blog posts as needed -->
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="main.js"></script>
