--- a/quiz.html
+++ b/quiz.html
@@ -12,19 +12,23 @@
     </header>
 
     <main>
-        <h1>Mental Health Self-Assessment Quiz</h1>
-        <p>This quiz is designed to help you assess your mental well-being. Please answer all questions honestly.</p>
-        <form id="quizForm">
-            <div id="quizContainer">
-                <!-- Quiz questions will be dynamically inserted here -->
-            </div>
-            <button type="submit">Submit</button>
-        </form>
-        <div id="quizResult"></div>
+        <div class="container">
+            <h1>Mental Health Self-Assessment Quiz</h1>
+            <p>This quiz is designed to help you assess your mental well-being. Please answer all questions honestly.</p>
+            <form id="quizForm">
+                <div id="quizContainer">
+                    <!-- Quiz questions will be dynamically inserted here -->
+                </div>
+                <button type="submit" class="btn">Submit</button>
+            </form>
+            <div id="quizResult"></div>
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="main.js"></script>
