--- a/contact.html
+++ b/contact.html
@@ -12,46 +12,50 @@
     </header>
 
     <main>
-        <h1>Contact Mental Health Professionals</h1>
-        <section>
-            <h2>Dr. Jane Smith</h2>
-            <p>Specialization: Depression and Anxiety</p>
-            <p>Email: jane.smith@example.com</p>
-            <p>Phone: (123) 456-7890</p>
-        </section>
-        <section>
-            <h2>Dr. John Doe</h2>
-            <p>Specialization: Youth Mental Health</p>
-            <p>Email: john.doe@example.com</p>
-            <p>Phone: (098) 765-4321</p>
-        </section>
+        <div class="container">
+            <h1>Contact Mental Health Professionals</h1>
+            <section class="professional-info">
+                <h2>Dr. Jane Smith</h2>
+                <p>Specialization: Depression and Anxiety</p>
+                <p>Email: jane.smith@example.com</p>
+                <p>Phone: (123) 456-7890</p>
+            </section>
+            <section class="professional-info">
+                <h2>Dr. John Doe</h2>
+                <p>Specialization: Youth Mental Health</p>
+                <p>Email: john.doe@example.com</p>
+                <p>Phone: (098) 765-4321</p>
+            </section>
 
-        <section>
-            <h2>Contact Form</h2>
-            <form id="contactForm">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+            <section>
+                <h2>Contact Form</h2>
+                <form id="contactForm">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
 
-                <label for="professional">Select Professional:</label>
-                <select id="professional" name="professional" required>
-                    <option value="">Choose a professional</option>
-                    <option value="jane.smith@example.com">Dr. Jane Smith</option>
-                    <option value="john.doe@example.com">Dr. John Doe</option>
-                </select>
+                    <label for="professional">Select Professional:</label>
+                    <select id="professional" name="professional" required>
+                        <option value="">Choose a professional</option>
+                        <option value="jane.smith@example.com">Dr. Jane Smith</option>
+                        <option value="john.doe@example.com">Dr. John Doe</option>
+                    </select>
 
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" required></textarea>
 
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+            </section>
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="main.js"></script>
