--- a/about.html
+++ b/about.html
@@ -12,23 +12,27 @@
     </header>
 
     <main>
-        <h1>About Healing Horizons</h1>
-        <section>
-            <h2>Our Mission</h2>
-            <p>Healing Horizons is dedicated to raising awareness about mental health issues and providing support to those in need.</p>
-        </section>
-        <section>
-            <h2>Our Team</h2>
-            <p>We are a group of mental health professionals and advocates committed to improving mental health in our community.</p>
-        </section>
-        <section>
-            <h2>Our Vision</h2>
-            <p>We envision a world where mental health is prioritized, understood, and destigmatized.</p>
-        </section>
+        <div class="container">
+            <h1>About Healing Horizons</h1>
+            <section class="about-section">
+                <h2>Our Mission</h2>
+                <p>Healing Horizons is dedicated to raising awareness about mental health issues and providing support to those in need.</p>
+            </section>
+            <section class="about-section">
+                <h2>Our Team</h2>
+                <p>We are a group of mental health professionals and advocates committed to improving mental health in our community.</p>
+            </section>
+            <section class="about-section">
+                <h2>Our Vision</h2>
+                <p>We envision a world where mental health is prioritized, understood, and destigmatized.</p>
+            </section>
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2025 Healing Horizons. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="main.js"></script>
