--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <nav>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="blog">Blog</a></li>
-                    <li><a href="quiz">Quiz</a></li>
-                    <li><a href="contact">Contact</a></li>
-                    <li><a href="about">About</a></li>
-                    <li><a href="login">Login</a></li>
-                    <li><a href="signup">Sign Up</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <div class="container">
+    <a href="/" class="logo">Healing Horizons</a>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/quiz">Quiz</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/signup">Sign Up</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
     <main>
         <section class="hero">
