--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="/" class="logo">Healing Horizons</a>
     <nav>
       <ul>
-        <li><a href="">Home</a></li>
+        <li><a href="index">Home</a></li>
         <li><a href="blog">Blog</a></li>
         <li><a href="quiz">Quiz</a></li>
         <li><a href="contact">Contact</a></li>
