--- a/login.html
+++ b/login.html
@@ -13,13 +13,13 @@
     <a href="/" class="logo">Healing Horizons</a>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/blog">Blog</a></li>
-        <li><a href="/quiz">Quiz</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/signup">Sign Up</a></li>
+        <li><a href="index">Home</a></li>
+        <li><a href="blog">Blog</a></li>
+        <li><a href="quiz">Quiz</a></li>
+        <li><a href="contact">Contact</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="login">Login</a></li>
+        <li><a href="signup">Sign Up</a></li>
       </ul>
     </nav>
   </div>
